# tcgogo

./: .env.example  .gitignore  azure_openai_responses.md  backend_agent.md  claude_todo.md  docker-compose.yml  frontend_study.md  how_to_frontend.md  teach.md  todo.md
backend/: Dockerfile  pyproject.toml
backend/src/: main.py  test.py
backend/src/agents/: testcase_agent.py
backend/src/core/: cors.py  exceptions.py
backend/src/db/: database.py  models.py
backend/src/middleware/: logging_middleware.py
backend/src/routers/: __init__.py  testcase.py
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/assets/css/: main.css
frontend/app/pages/: index.vue
frontend/app/stores/: testcase.ts
