[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "deepagents>=0.4.11",
    "fastapi[standard]>=0.128.0",
    "langchain-openai>=1.1.11",
    "loguru>=0.7.3",
    "openai>=2.28.0",
    "python-dotenv>=1.2.2",
]
